# HPool

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  hpool.hpp  new_hpool.hpp
bench/: bench.cpp  hbench.hpp
benchmark/: benchmark.cpp
build-release/conan/: conanbuild.sh  conanbuildenv-release-x86_64.sh  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh
cpp/: CMakeLists.txt  hpool.hpp
cpp/include/: hpool.hpp
cpp/src/: hpool.cpp
cpp/test/: tests.cpp
scripts/: build.py
test/: tests.cpp
